feat: connection with mongoDB

--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,5 @@ MAIL_FROM="kaldrma@test.com"
 MAIL_HOST="smtp.mailtrap.io"
 MAIL_PORT=2525
 MAIL_USER="adf0c54771f19f"
-MAIL_PASS="07f2b6101ed542"
+MAIL_PASS="BDy1yrhht3s8yErM"
+MONGO_DB_LINK="mongodb+srv://kaldrmakaldrma:BDy1yrhht3s8yErM@cluster0.2bgvl.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
