--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,5 @@ MAIL_PORT=2525
 MAIL_USER="adf0c54771f19f"
 MAIL_PASS="BDy1yrhht3s8yErM"
 MONGO_DB_LINK="mongodb+srv://kaldrmakaldrma:BDy1yrhht3s8yErM@cluster0.2bgvl.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+PASS_SEC="Mustafa123"
+JWT_SEC="Mustafa123"
