--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,11 @@
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "prettier": "^2.5.1",
     "mongoose": "^6.1.8",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
