--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,4 @@ MAIL_PASS="BDy1yrhht3s8yErM"
 MONGO_DB_LINK="mongodb+srv://kaldrmakaldrma:BDy1yrhht3s8yErM@cluster0.2bgvl.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 PASS_SEC="Mustafa123"
 JWT_SEC="Mustafa123"
+STRIPE_KEY="sk_test_9LvBgRBYGlZoASkxX01qj1B200mPRXmMxe"
