--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-stripe-checkout": "^2.6.3",
     "sass": "^1.45.0",
     "typescript": "^4.5.2",
     "uuidv4": "^6.2.12",
